Began complete implementation in OCaml
This is for LLVM IR ease of integration.

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,41 @@ nb-configuration.xml
 target/
 .DS_Store
 Thumbs.db
+
+##############################
+## OCaml
+##############################
+# Dune build artifacts
+_build/
+*.install
+*.merlin
+.merlin
+
+# OCaml compiler artifacts
+*.cmi
+*.cmo
+*.cmx
+*.cmxa
+*.cma
+*.o
+*.a
+*.so
+*.dll
+*.exe
+*.byte
+*.opt
+
+# Editor/IDE specific files
+.vscode/
+.idea/
+*.swp
+*~
+.#*
+
+# System-specific files
+.DS_Store
+Thumbs.db
+
+# Other common ignored files
+*.log
+*.bak
