--- a/loom-compiler/CMakeLists.txt
+++ b/loom-compiler/CMakeLists.txt
@@ -3,10 +3,37 @@ project(loom_compiler)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(loom_compiler src/main.cpp
-        include/main.hpp
-        src/tokens/Token.cpp
-        include/token/Token.hpp)
+add_executable(loom_compiler
 
-include_directories(${PROJECT_SOURCE_DIR}/include
-        ${PROJECT_SOURCE_DIR}/include/token)
+        ##############################
+        ## SOURCE FILES
+        ##############################
+
+        src/main.cpp
+
+        # LEXER
+        src/lexer/Lexer.cpp
+
+        # TOKEN
+        src/tokens/Token.cpp
+        src/tokens/TokenSpan.cpp
+
+        ##############################
+        ## HEADERS
+        ##############################
+
+        include/main.hpp
+
+        # LEXER
+        include/lexer/Lexer.hpp
+
+        # TOKEN
+        include/tokens/Token.hpp
+        include/tokens/TokenSpan.hpp
+)
+
+include_directories(
+        ${PROJECT_SOURCE_DIR}/include
+        ${PROJECT_SOURCE_DIR}/include/tokens
+        ${PROJECT_SOURCE_DIR}/include/lexer
+)
